Mise en marche de l'insertion et liste des vols
- L'insertion des vols se fait simplement par l'ADMIN
- La liste des vols est accessible par le frontoffice comme la recherche muticritere

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,9 @@
     color: var(--primary-color);
     margin-bottom: 2rem;
 }
+
+.error-message {
+    background-color: #FEE2E2;
+    border: 1px solid #FCA5A5;
+    color: #DC2626;
+}
